--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -15,10 +15,10 @@
 
   --grey_darker: #5a5a5a;
   --grey: #999999;
-  --grey_light: #a6a6a6;
+//  --grey_light: #a6a6a6;
 
-  --white_darkest: #e0e0e0;
-  --white_darker: #f0f0f0;
+//  --white_darkest: #e0e0e0;
+//  --white_darker: #f0f0f0;
 //  --white_dark: #fafafa;
   --white-hover: #cce7ff;
 
@@ -29,28 +29,35 @@
   --header: #fafafa;
   --background-separator: #e0e0e0;
   --text: #5a5a5a;
+  --scrollbar: #e8e8e8;
 
   --main-blue: #0087ff;
   --main-blue--light: #88ccff;
   --main-blue__text: #ffffff;
 
   --solidbox-background: #eaf6ff;
+  --solidbox-codebox-background: #c7e7ff;
   --solidbox-text: #4f6375;
+  --codebox-shell-sign: #8f9aa2;
 }
 
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   :root {
-    --app-background: #1b1b1d;
+    --app-background: #1b1b1b;
     --header: #191919;
-    --background-separator: #282C36;
+    --background-separator: #282c36;
     --text: #c0c0c0;
+    --scrollbar: #323232;
 
     --main-blue: #0064bd;
     --main-blue--light: #003564;
     --main-blue__text: #cfcfcf;
 
-    --solidbox-background: #282C36;
+    --solidbox-background: #282c36;
+    --solidbox-codebox-background: #50586c;
     --solidbox-text: var(--text);
+    --codebox-shell-sign: #8f9aa2;
+
   }
 }
